2005-04-30 Francois Proulx <francois.proulx@gmail.com>
	* Did my best for content styling ... ( it's 5h00 am )
	
2005-04-30 Francois Proulx <francois.proulx@gmail.com>
	* Updated sync_sql_for_cvs.sh

2005-04-30 François Proulx <francois.proulx@gmail.com>
	* ChangeLog entry missed by CVS ?!
	* Locale now decomposes the locale string by '_'  
	* Now works on Mac OS X ( but you must use fr_CA, en_CA or fr_FR ... )
	
2005-04-30 François Proulx <francois.proulx@gmail.com>
	* Trying to solve RSS encoding bug...
	* Testing on live server
	
2005-04-29 François Proulx <francois.proulx@gmail.com>
	* Removed all inline unuseful javascript code on submit buttons onclick='submit()'
	* This conflicted with the actual click on the submit button in Safari
	* Fixed check in Network for isOwner, only check superAdmin
	* Fixed bug so you can't add an existing content group to itself ( deadlock )
	* Started coding Pattern language narrative display

2005-04-29 François Proulx <francois.proulx@gmail.com>
	* Wrote User.php addcontent, removeContent, getAllContent()
	* Wrote Content.php subscrite() and unsubscribe()
	* Added parameters to getAllContent() in Node and Network ( exclude_subscribed_content )
	* These will be used for subscribing a to some content
	* Pattern Language will be the first to use it
	* Online users lists
	* Fixed bugs in Node and Network ( isOwner check )
	
2005-04-28 François Proulx <francois.proulx@gmail.com>
	* Logout button build a query string containing gw_id, gw_address, gw_port ( if available ), so that a user at a physical hotspot will get the login page from the hotspot he is.
	* Fixed but in Locale ( did not propertly set the locale in the session )
	
2005-04-28 François Proulx <francois.proulx@gmail.com>
	* Added check in MainUI toolbar so that it won't show "NOT logged in ?" message when connect to a real hotspot ( not virtual )
		* This message confused many users ( they clicked and got the virtual login instead ! )